<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_camera" />
    <Button
        android:id="@+id/btn_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_internet" />
    <Button
        android:id="@+id/btn_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_location" />
    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_contacts" />
    <Button
        android:id="@+id/btn_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_storage" />

</LinearLayout>